# project-atlas

./: .env.example  .gitignore  CLAUDE.md  LICENSE  MANIFEST.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  tsconfig.json  turbo.json
.claude/: settings.json
services/api/: alembic.ini  pyproject.toml
services/api/alembic/: env.py
services/api/alembic/versions/: 0001_initial_schema.py  0002_add_pgvector.py
services/api/src/atlas_api/: __init__.py  config.py  db.py  main.py  queue.py  storage.py
services/api/src/atlas_api/adapters/: __init__.py  deerflow.py  hermes.py  mirofish.py
services/api/src/atlas_api/evals/: __init__.py  compiler_eval.py  models.py  search_eval.py
services/api/src/atlas_api/models/: __init__.py  concept.py  entity.py  enums.py  evidence.py  job.py  output.py  source.py  vault.py  workspace.py
services/api/src/atlas_api/routes/: chat.py  evals.py  evidence.py  health.py  health_check.py  integrations_deerflow.py  integrations_hermes.py  integrations_mirofish.py  jobs.py  search.py  sources.py  sync.py  vault.py  workspaces.py
services/api/src/atlas_api/schemas/: __init__.py  embedding.py  job.py  source.py  workspace.py
services/api/src/atlas_api/search/: __init__.py  evidence.py  indexer.py  models.py  query.py
services/api/tests/: FIXTURES_README.md  INTEGRATION_TEST_GUIDE.md  TEST_INFRASTRUCTURE.md  conftest.py  test_adapters.py  test_evals.py  test_health.py  test_health_check.py  test_search.py  test_sources.py  test_vault_routes.py  test_workspaces.py
services/api/tests/evals/: __init__.py  test_compiler_eval.py  test_search_eval.py
services/api/tests/fixtures/: README.md  adapters.py
services/api/tests/fixtures/vault/: health-check-issue-note.md  knowledge-compilation.md  orphan-note.md  research-methodologies.md  semantic-search.md
services/worker/: pyproject.toml
services/worker/src/atlas_worker/: __init__.py  config.py  main.py
services/worker/tests/: SYNC_TEST_GUIDE.md  __init__.py  conftest.py  test_audio_extractor.py  test_compiler.py  test_docx_extractor.py  test_e2e_pipeline.py  test_embedder.py  test_extractors.py  test_health.py  test_inference.py  test_ingest.py  test_ingest_job.py  test_jobs.py  test_meeting_minutes.py  test_pptx_extractor.py  test_rag.py  test_reference_extractor.py  test_summarizer.py  test_sync.py  test_translator.py  test_vector_store.py  test_xlsx_extractor.py
services/worker/tests/fixtures/: sample.html  sample.txt
(+177 files in other folders)
