[project]
name = "atlas-worker"
version = "0.1.0"
description = "Atlas knowledge compiler worker service"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "redis>=5.0.0",
    "arq>=0.25.0",
    "httpx>=0.27.0",
    "structlog>=24.1.0",
    "pyyaml>=6.0.0",
    "pdfplumber>=0.11.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.2.0",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.0",
    "python-pptx>=0.6.0",
    "pgvector>=0.3.0",
]


[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]
mlx = [
    "lightning-whisper-mlx>=0.0.8",
    "mlx-vlm>=0.1.0",
    "mlx>=0.4.0",
]

[project.scripts]
atlas-worker = "atlas_worker.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/atlas_worker"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
